@@ -136,6 +136,7 @@ register_connection(SID, #jid{luser = LUser, lserver = LServer}) ->
 
 %% Remove an anonymous user from the anonymous users table
 unregister_connection(SID, #jid{luser = LUser, lserver = LServer}) ->
+    ejabberd_hooks:run(anonymous_purge_hook, jlib:nameprep(LServer), [LUser, LServer]),
     remove_connection(SID, LUser, LServer).
 
 %% ---------------------------------
