@@ -1,3 +1,12 @@
+2007-05-12  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/ejabberd_auth_anonymous.erl: Added anonymous_purge_hook
+	(thanks to Christophe Romain and Mickael Remond)
+	* src/mod_offline.erl: Likewise
+	* src/mod_offline_odbc.erl: Likewise
+	* src/mod_roster.erl: Likewise
+	* src/mod_roster_odbc.erl: Likewise
+
 2007-05-09  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/mod_muc/mod_muc.erl: Bugfix
